--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "nodecrawlerexpress",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "victor augusto",
-    "license": "ISC",
-    "dependencies": {
-        "cheerio": "^0.20.0",
-        "express": "^4.13.4",
-        "request": "^2.69.0"
-    }
+  "name": "nodecrawlerexpress",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "victor augusto",
+  "license": "ISC",
+  "dependencies": {
+    "cheerio": "^0.20.0",
+    "express": "^4.13.4",
+    "request": "^2.69.0",
+    "requestify": "^0.1.17"
+  }
 }
