--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "cheerio": "^0.20.0",
     "express": "^4.13.4",
+    "lodash": "^4.5.1",
     "request": "^2.69.0",
+    "request-promise": "^2.0.1",
     "requestify": "^0.1.17"
   }
 }
